Add search functionality

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -14,9 +14,9 @@
                 All Products
             </a>
             <div class="dropdown-menu border-0 bg-dark" aria-labelledby="all-products-link">
-                <a href="{% url 'products' %}" class="dropdown-item bg-dark text-white">By Price</a>
-                <a href="{% url 'products' %}" class="dropdown-item bg-dark text-white">By Rating</a>
-                <a href="{% url 'products' %}" class="dropdown-item bg-dark text-white">By Category</a>
+                <a href="" class="dropdown-item bg-dark text-white">By Price</a>
+                <a href="" class="dropdown-item bg-dark text-white">By Rating</a>
+                <a href="" class="dropdown-item bg-dark text-white">By Category</a>
                 <a href="{% url 'products' %}" class="dropdown-item bg-dark text-white">All Products</a>
             </div>
         </li>
@@ -29,10 +29,10 @@
                 Wigs
             </a>
             <div class="dropdown-menu border-0 bg-dark" aria-labelledby="wigs-link">
-                <a href="{% url 'products' %}" class="dropdown-item bg-dark text-white">360 Lace Wigs</a>
-                <a href="{% url 'products' %}" class="dropdown-item bg-dark text-white">Frontal Lace Wigs</a>
-                <a href="{% url 'products' %}" class="dropdown-item bg-dark text-white">Synthetic Wigs</a>
-                <a href="{% url 'products' %}" class="dropdown-item bg-dark text-white">All Wigs</a>
+                <a href="" class="dropdown-item bg-dark text-white">360 Lace Wigs</a>
+                <a href="" class="dropdown-item bg-dark text-white">Frontal Lace Wigs</a>
+                <a href="" class="dropdown-item bg-dark text-white">Synthetic Wigs</a>
+                <a href="" class="dropdown-item bg-dark text-white">All Wigs</a>
             </div>
         </li>
 
@@ -44,10 +44,10 @@
                 Hair Care Products
             </a>
             <div class="dropdown-menu border-0 bg-dark" aria-labelledby="hair-care-products-link">
-                <a href="{% url 'products' %}" class="dropdown-item bg-dark text-white">Hair Shampoo</a>
-                <a href="{% url 'products' %}" class="dropdown-item bg-dark text-white">Hair Conditioner</a>
-                <a href="{% url 'products' %}" class="dropdown-item bg-dark text-white">Hair Oils</a>
-                <a href="{% url 'products' %}" class="dropdown-item bg-dark text-white">All Hair Care Products</a>
+                <a href="" class="dropdown-item bg-dark text-white">Hair Shampoo</a>
+                <a href="" class="dropdown-item bg-dark text-white">Hair Conditioner</a>
+                <a href="" class="dropdown-item bg-dark text-white">Hair Oils</a>
+                <a href="" class="dropdown-item bg-dark text-white">All Hair Care Products</a>
             </div>
         </li>
 
@@ -59,10 +59,10 @@
                 Deals
             </a>
             <div class="dropdown-menu border-0 bg-dark" aria-labelledby="deals-link">
-                <a class="dropdown-item bg-dark text-white" href="{% url 'products' %}">Under €10</a>
-                <a class="dropdown-item bg-dark text-white" href="{% url 'products' %}">Under €20</a>
-                <a class="dropdown-item bg-dark text-white" href="{% url 'products' %}">Under €30</a>
-                <a class="dropdown-item bg-dark text-white" href="{% url 'products' %}">All deals</a>
+                <a href="" class="dropdown-item bg-dark text-white" >Under €10</a>
+                <a href="" class="dropdown-item bg-dark text-white" >Under €20</a>
+                <a href="" class="dropdown-item bg-dark text-white">Under €30</a>
+                <a href="" class="dropdown-item bg-dark text-white">All deals</a>
             </div>
         </li>
     </ul>
