--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
                 </div>
                 <!-- 2nd col div below contains the search form.   -->
                 <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 ">
-                    <form class="form-inline my-2 my-lg-0" method="GET" action="">
+                    <form class="form-inline my-2 my-lg-0" method="GET" action="{% url 'products' %}">
                         <div class="input-group w-100">
                             <input class="form-control mr-sm-2 border border-black rounded-0" type="text" name="q" placeholder="Search our site" aria-label="Search">
                             <div class="input-group-append">
