--- a/templates/base.html
+++ b/templates/base.html
@@ -50,11 +50,11 @@
                 </div>
                 <!-- 2nd col div below contains the search form.   -->
                 <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 ">
-                    <form class="form-inline my-2 my-lg-0" method="GET" action="{% url 'products' %}">
+                    <form method="GET" action="{% url 'products' %}">
                         <div class="input-group w-100">
-                            <input class="form-control mr-sm-2 border border-black rounded-0" type="text" name="q" placeholder="Search our site" aria-label="Search">
+                            <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
                             <div class="input-group-append">
-                                <button class="form-control btn btn-black border border-black rounded-0 btn-outline-success my-2 my-sm-0" type="submit">
+                                <button class="form-control btn btn-black border border-black rounded-0" type="submit">
                                     <span class="icon">
                                         <i class="fas fa-search"></i>
                                     </span>
@@ -120,89 +120,8 @@
             </div>
         </header> 
 
-        <!-- <header class="row container-fluid fixed-top">  
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark w-100">
-                <a class="navbar-brand main-logo-link" href="{% url 'home' %}">
-                    wi<em><strong>G</strong></em>alleria
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-                </button> 
-                
-                  
-                <div class="collapse navbar-collapse" id="navbarNav"> -->
-                     <!-- Toggler/collapsibe Button -->
-                    <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-controls="collapsibleNavbar" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    {% include 'includes/mobile-top-header.html' %}
-                    {% include 'includes/main-nav.html' %}
-
-                    <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-                        <form method="GET" action="#"> 
-                            <div class="input-group w-100">
-                                <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
-                                <div class="input-group-append">
-                                    <button class="form-control btn border border-black rounded-0" type="submit">
-                                        <span class="icon">
-                                            <i class="fas fa-search"></i>
-                                        </span>
-                                    </button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                        
-                    <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-                        <ul class="list-inline list-unstyled text-center text-lg-right my-0">
-                            <li class="nav-item list-inline-item dropdown">
-                                <a class="nav-link text-white" href="#" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <div class="text-center">
-                                        <div><i class="fas fa-user fa-lg"></i></div>
-                                        <p class="my-0">My Account</p>
-                                    </div> 
-                                </a>
-                                <div class="dropdown-menu border-0" aria-labelledby="navbarDropdown">
-                                    {% if request.user.is_authenticated %}
-                                        <p class="greeting">Welcome {{ user.username }}!</p> 
-                                        {% if request.user.is_superuser %}
-                                            <a href="#" class="dropdown-item bg-color text-white">Store Management</a>
-                                        {% endif %}
-                                        <a href="#" class="dropdown-item bg-color text-white">My Profile</a>
-                                        <a href="{% url 'account_logout' %}" class="dropdown-item bg-color text-white">Logout</a>
-                                    {% else %}
-                                        <a href="{% url 'account_signup' %}" class="dropdown-item bg-color text-white">Register</a>
-                                        <a href="{% url 'account_login' %}" class="dropdown-item bg-color text-white">Login</a>
-                                    {% endif %}
-                                </div>
-                            </li> -->
-
-                            <!-- <li class="list-inline-item">
-                                <a class="{% if grand_total %}text-black font-weight-bold{% else %}text-white{% endif %} nav-link" href="#">
-                                    <div class="text-center">
-                                        <div><i class="fas fa-shopping-cart fa-lg"></i></div>
-                                        <p class="my-0">
-                                            {% if grand_total %}
-                                                €{{ grand_total|floatformat:2 }}
-                                            {% else %}
-                                                €0.00
-                                            {% endif %}
-                                        </p>
-                                    </div>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>  
-            </nav> -->
-
-            <!-- <div id="delivery-banner" class="row text-center">
-                <div class="col bg-grey text-white">
-                    <h4 class="logo-font">Free Delivery on orders over €{{ free_shipping_threshold }}!</h4>
-                </div>
-            </div> -->
-
-        {% if messgaes %}
+        
+        {% if messages %}
             <div class="message-container"></div>
         {% endif %}
 
