--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -14,9 +14,9 @@
                 All Products
             </a>
             <div class="dropdown-menu border-0 bg-dark" aria-labelledby="all-products-link">
-                <a href="" class="dropdown-item bg-dark text-white">By Price</a>
-                <a href="" class="dropdown-item bg-dark text-white">By Rating</a>
-                <a href="" class="dropdown-item bg-dark text-white">By Category</a>
+                <a href="{% url 'products' %}?sort=price&direction=asc" class="dropdown-item bg-dark text-white">By Price</a>
+                <a href="{% url 'products' %}?sort=rating&direction=desc" class="dropdown-item bg-dark text-white">By Rating</a>
+                <a href="{% url 'products' %}?sort=category&direction=asc" class="dropdown-item bg-dark text-white">By Category</a>
                 <a href="{% url 'products' %}" class="dropdown-item bg-dark text-white">All Products</a>
             </div>
         </li>
