--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -29,10 +29,10 @@
                 Wigs
             </a>
             <div class="dropdown-menu border-0 bg-dark" aria-labelledby="wigs-link">
-                <a href="{% url 'products' %}?category=360_lace_wig" class="dropdown-item bg-dark text-white">360 Lace Wigs</a>
-                <a href="{% url 'products' %}?category=frontal_lace_wig" class="dropdown-item bg-dark text-white">Frontal Lace Wigs</a>
-                <a href="{% url 'products' %}?category=synthetic_wig" class="dropdown-item bg-dark text-white">Synthetic Wigs</a>
-                <a href="{% url 'products' %}?category=360_lace_wig,frontal_lace_wig,synthetic_wig" class="dropdown-item bg-dark text-white">All Wigs</a>
+                <a href="{% url 'products' %}?category=360_lace" class="dropdown-item bg-dark text-white">360 Lace</a>
+                <a href="{% url 'products' %}?category=frontal_lace" class="dropdown-item bg-dark text-white">Frontal Lace</a>
+                <a href="{% url 'products' %}?category=synthetic" class="dropdown-item bg-dark text-white">Synthetic</a>
+                <a href="{% url 'products' %}?category=360_lace,frontal_lace,synthetic" class="dropdown-item bg-dark text-white">All Wigs</a>
             </div>
         </li>
 
@@ -44,10 +44,10 @@
                 Hair Care Products
             </a>
             <div class="dropdown-menu border-0 bg-dark" aria-labelledby="hair-care-products-link">
-                <a href="{% url 'products' %}?category=hair_shampoo" class="dropdown-item bg-dark text-white">Shampoo</a>
-                <a href="{% url 'products' %}?category=hair_conditioner" class="dropdown-item bg-dark text-white">Conditioner</a>
-                <a href="{% url 'products' %}?category=hair_oils" class="dropdown-item bg-dark text-white">Oils</a>
-                <a href="{% url 'products' %}?category=hair_shampoo,hair_conditioner,hair_oils" class="dropdown-item bg-dark text-white">All Hair Care Products</a>
+                <a href="{% url 'products' %}?category=shampoo" class="dropdown-item bg-dark text-white">Shampoo</a>
+                <a href="{% url 'products' %}?category=conditioner" class="dropdown-item bg-dark text-white">Conditioner</a>
+                <a href="{% url 'products' %}?category=oils" class="dropdown-item bg-dark text-white">Oils</a>
+                <a href="{% url 'products' %}?category=shampoo,conditioner,oils" class="dropdown-item bg-dark text-white">All Hair Care Products</a>
             </div>
         </li>
 
