--- a/static/css/base.css
+++ b/static/css/base.css
@@ -111,6 +111,18 @@ a.category-badge > span.badge:hover {
     color:#fff !important; 
 }
 
+.btt-button {
+    height: 42px;
+    width: 42px;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+} 
+
+.btt-link {
+    cursor: pointer;
+}
+
 /* .box-element {
     box-shadow:hsl(0, 0%, 80%) 0 0 16px;
 	background-color: #fff;
