--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -45,10 +45,45 @@
                         <small class="text-muted">No Rating!</small>
                     {% endif %}
                     <p class="mt-3">{{ product.description }}</p>
+
+                    <hr>
+
+                    <strong>
+                        {% if request.user.is_authenticated %}
+                        <form class="d-inline" action="{% url 'like_product' product.pk %}" method="POST">
+                            {% csrf_token %}
+                            {% if liked %}
+                            <button type="submit" name="prod_id" value="{{ product.id }}" class="btn-like"><i
+                                class="fas fa-heart"></i></button>
+    
+                            {% else %}
+                            <button type="submit" name="prod_id" value="{{ product.id }}" class="btn-like"><i
+                                class="far fa-heart"></i></button>
+    
+                            {% endif %}
+                        </form>
+                        {% else %}
+                        <span class="text-secondary"><i class="far fa-heart"></i></span>
+                        {% endif %}
+                        <span class="text-secondary">{{ product.number_of_likes }}</span>
+                    </strong>
+
                 </div>
             </div>
         </div>
     </div>
+
+    <!-- <div class="row">
+        <div class="col">
+            <hr>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-8 card mb-4 mt-3 ">
+            <h3>Comments:</h3>
+            <div class="card-body"  -->
+
+    
         
 {% endblock %}
 
