--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -73,15 +73,16 @@
         </div>
     </div>
 
-    <!-- <div class="row">
+    <!-- COMMENTS CODE GOES HERE -->
+    <div class="row">
         <div class="col">
             <hr>
         </div>
     </div>
-    <div class="row">
+    <!-- <div class="row">
         <div class="col-md-8 card mb-4 mt-3 ">
             <h3>Comments:</h3>
-            <div class="card-body"  -->
+            <div class="card-body"   -->
 
     
         
