--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
         <title>wiGalleria {% block extra_title %}{% endblock %}</title>
     </head>
     <body>
-        <header class="container-fluid fixed-top">
+        <header class="container-fluid">
             <div id="topnav" class="row bg-dark pt-lg-2 d-none d-lg-flex"> 
                 <!-- 1st col div below contains the wiGalleria logo  -->
                 <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
