--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -73,7 +73,7 @@
         </div>
     </div>
 
-    <!-- COMMENTS CODE GOES HERE -->
+    <!-- GENERAL COMMENTS CODE GOES HERE -->
     <div class="row">
         <div class="col">
             <hr>
@@ -84,8 +84,83 @@
             <h3>Comments:</h3>
             <div class="card-body"   -->
 
-    
-        
+    <!-- PRODUCT REVIEW CODE GOES HERE -->
+    <h2 class="subtitle">Reviews</h2>
+
+    <div class="reviews-wrapper">
+        {% for review in product.reviews.all %}
+            <div class="notification space-below">
+                <p>
+                    <strong>Date: </strong>{{ review.created_on|date:"Y-m-d" }},
+                    <strong>Stars: </strong>{{ review.stars }}
+                </p>
+
+                {{ review.content }}
+            </div>
+            <!-- This below is for if product has no Reviews -->
+            {% empty %}
+                <div class="notification space-below">
+                    No reviews yet...
+                </div>
+        {% endfor %}
+    </div>
+
+    <div class="notification space-below">
+        {% if request.user.is_authenticated %}
+            <form class="no-reviews-wrapper" method="POST" action=".">
+                {% csrf_token %}
+
+                <div class="field">
+                    <label>Stars</label>
+
+                    <div class="control">
+                        <div class="select">
+                            <select name="stars">
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3" selected>3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="field">
+                    <label class="content-rev">Content</label>
+
+                    <div class="control">
+                        <textarea class="textarea" name="content"></textarea>
+                    </div>
+                </div>
+
+                <div class="field">
+                    <div class="control">
+                        <button class="button bg-success submit-bttn">Submit</button>
+                    </div>
+                </div>
+            </form>
+            {% else %}
+                <p class="no-reviews-wrapper">Please sign in to add review!</p>
+        {% endif %}
+    </div>
+   
+    <!-- BACK TO TOP BUTTON -->
+    <div class="btt-button shadow-sm rounded-0 border border-black">
+        <a class="btt-link d-flex h-100">
+            <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
+        </a>
+    </div>
+{% endblock %}
+
+<!-- JS FOR BACK TO TOP BUTTON -->
+{% block postloadjs %}
+    {{ block.super }}
+    <script type="text/javascript">
+        $('.btt-link').click(function(e) {
+            window.scrollTo(0,0)
+        })
+    </script>
 {% endblock %}
 
 
