--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -2,11 +2,11 @@
 {% load static %}
 
 {% block page_header %}
-    <div class="container header-container">
+    <!-- <div class="container header-container">
         <div class="row">
             <div class="col"></div>
         </div>
-    </div>
+    </div> -->
 {% endblock %}
 
 {% block content %}
@@ -69,6 +69,7 @@
                     </strong>
 
                     <a href="{% url 'add_to_wishlist' product.pk %}" class="btn btn-light" role="button" aria-disabled="true">Add to Wish List</a>
+                    <a href="{% url 'wishlist' %}" class="btn btn-light" role="button" aria-disabled="true">View your Wish List</a>
                     
                 </div>
             </div>
