--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -2,29 +2,33 @@
 {% load static %}
 
 {% block page_header %}
-    <div class="container header-container">
+    <!-- <div class="container header-container">
         <div class="row">
             <div class="col"></div>
         </div>
-    </div>
+    </div> -->
 {% endblock %}
 
 {% block content %}
 <!-- This full-page overlay below will be used to cover up the body's 
     background image & give this all products page a white background. -->
 <div class="overlay"></div>
-    <div class="container-fluid">
+    <div class="container mb-2">
         <div class="row">
-            <div class="col text-center mt-3">
-                <h2 class="logo-font">Products</h2>
-                {% for c in current_categories %}
-                    <a class="category-badge text-decoration-none" href="{% url 'products' %}?category={{ c.name }}">
-                        <span class="p-2 mt-2 badge badge-white text-black rounded-0 border border-dark">{{ c.friendly_name }}</span>
-                    </a>
-                {% endfor %}
-                <hr class="w-50 mb-1">
+            <div class="col">
+                <hr>
+                <h2 class="logo-font mb-4">Products</h2>
+                <hr>
             </div>
         </div>
+        {% for c in current_categories %}
+            <a class="category-badge text-decoration-none" href="{% url 'products' %}?category={{ c.name }}">
+                <span class="p-2 mt-2 badge badge-white text-black rounded-0 border border-dark">{{ c.friendly_name }}</span>
+            </a>
+        {% endfor %}
+                <!-- <hr class="w-50 mb-1">
+            </div>
+        </div> -->
         <div class="row">
             <div class="product-container col-10 offset-1">
                 <div class="row mt-1 mb-2">
@@ -131,7 +135,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>  <!-- container class ends -->
     <div class="btt-button shadow-sm rounded-0 border border-black">
         <a class="btt-link d-flex h-100">
             <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
