--- a/products/templates/products/user_wish_list.html
+++ b/products/templates/products/user_wish_list.html
@@ -4,44 +4,66 @@
 
 {% block content %}
 <div class="overlay"></div>
-<div class="col-12 mx-auto">
-    <h1>My Wish List</h1>
-    <div>Manage your Wishlist</div>
-    <hr>
+<div class="container mb-2">
+    <div class="row">
+        <div class="col">
+            <hr>
+            <h2 class="logo-font mb-4">My Wish List</h2>
+            <hr>
+        </div>
+    </div>
+    <!-- <div class="col-12 mx-auto"> -->
+    <!-- <h1>My Wish List</h1> -->
+    <!-- <div>Manage your Wishlist</div>
+    <hr> -->
 
     {% if user.is_authenticated %}
         {% if wishlist %}
             {% for product in wishlist %}
 
-            <div class="card mb-3 rounded-0">
-                <div class="row g-0">
-                    <div class="col-md-2">
-                        {% for image in product.image.all %}
-                            {% if product.image %}
-                                <a href="{{ product.image.url }}" target="_blank">
-                                    <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
+                        <div class="image-container my-5">
+                            <!-- {% for image in product.image.all %} -->
+                                {% if product.image %}
+                                    <a href="{{ product.image.url }}" target="_blank">
+                                        <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+                                    </a>
+                                {% else %}
+                                    <a href="">
+                                        <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
+                                    </a>
+                                {% endif %}
+                            <!-- {% endfor %} -->
+                        </div> <!-- image-container class ends-->
+                    </div> <!-- col 12 class ends-->
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="product-details-container mb-5 mt-md-5">
+                            <p class="mb-0">{{ product.name }}</p>
+                            <p class="lead mb-0 text-left font-weight-bold">€{{ product.price }}</p>
+                            {% if product.category %}
+                            <p class="small mt-1 mb-0">
+                                <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
+                                    <i class="fas fa-tag mr-1"></i>{{  product.category.friendly_name}}
                                 </a>
-                            {% else %}
-                                <a href="">
-                                    <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
-                                </a>
+                            </p>
                             {% endif %}
-                        {% endfor %}
-                    </div>
-                    <div class="col-md-10">
-                        <div class="card-body">
-                            <h5 class="card-name">{{ product.name }}</h5>
-                            <p class="card-text">{{ product.description }}</p>
-                            <p class="card-text"><small class="text-muted">{{ product.price }}</small></p>
+                            {% if product.rating %}
+                                <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
+                            {% else %}
+                                <small class="text-muted">No Rating!</small>
+                            {% endif %}
+                            <p class="mt-3">{{ product.description }}</p>
                             <a type="button" class="btn btn-primary btn-sm" href="{% url 'add_to_wishlist' product.pk %}">Remove from Wishlist</a>
                         </div>
                     </div>
-                </div>
-            </div>
+                </div> <!-- row div ends-->
+            </div> <!-- container-fluid class ends-->
             {% endfor %}
         <!-- If user is not authenticated but has not added any product to her wishlist -->
         {% else %}
-            <p class="card-text">No products have been added to your Wishlist yet! </p>
+            <p>No products have been added to your Wishlist yet! </p>
         {% endif %}
 
     <!-- If user is not authenticated -->
