--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <!doctype html>
 <html lang="en">
     <head>
@@ -102,7 +103,7 @@
                         </li>
 
                         <li class="list-inline-item">
-                            <a class="{% if grand_total %}text-black font-weight-bold{% else %}text-white{% endif %} nav-link" href="#">
+                            <a class="{% if grand_total %}text-black font-weight-bold{% else %}text-white{% endif %} nav-link" href="{% url 'view_cart' %}">
                                 <div class="text-center">
                                     <div><i class="fas fa-shopping-cart fa-lg"></i></div>
                                     <p class="my-0">
