--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -41,16 +41,27 @@
             {% endif %}
             <a href="" class="dropdown-item bg-color text-white">My Profile</a>
             <a href="{% url 'account_logout' %}" class="dropdown-item bg-color text-white">Logout</a>
+            <a href="{% url 'wishlist' %}" class="text-white nav-link bg-color text-white">
+                <p class="my-0">
+                    My Wish List
+                </p>
+            </a>
+
         {% else %}
             <a href="{% url 'account_signup' %}" class="dropdown-item bg-color text-white">Register</a>
             <a href="{% url 'account_login' %}" class="dropdown-item bg-color text-white">Login</a>
+            <a href="{% url 'wishlist' %}" class="text-white nav-link bg-color text-white">
+                <p class="my-0">
+                    My Wish List
+                </p>
+            </a> 
         {% endif %}
     </div>
 </li>
 
 <!-- The 3rd list item will give us a button to access the shopping cart. -->
 <li class="list-inline-item">
-    <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-white{% endif %} nav-link d-block d-lg-none" href="#">
+    <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-white{% endif %} nav-link d-block d-lg-none" href="{% url 'view_cart' %}">
         <div class="text-center">
             <div><i class="fas fa-shopping-cart fa-lg"></i></div>
             <p class="my-0">
