Add the add to cart functionality

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -34,7 +34,7 @@
                             <th><h5 class="no-of-items">Items:
                                 {% if cart_items %} 
                                     <strong>
-                                        {{cart_items}}
+                                        {{ product_count }}
                                     </strong></h5></th>
                                 {% else %}
                                     0
