--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -46,6 +46,35 @@
                     {% endif %}
                     <p class="mt-3">{{ product.description }}</p>
 
+                    <form class="form" action="{% url 'add_to_cart' product.id %}" method="POST">
+                        {% csrf_token %}
+                        <div class="form-row">
+                            <div class="col-12">
+                                <p class="mt-3"><strong>Quantity:</strong></p>
+                                <div class="form-group w-50">
+                                    <div class="input-group">
+                                        <input class="form-control qty_input" type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-12">
+                                <a class="btn btn-md rounded-0 py-3 mt-5 shop-now-button cart-margin" href="{% url 'products' %}">
+                                    <span class="icon">
+                                        <i class="fas fa-chevron-left"></i>
+                                    </span>
+                                    <span>Continue Shopping</span>    
+                                </a>
+                                <input type="submit" class="btn btn-md rounded-0 py-3 mt-5 shop-now-button" value="Add to Cart">
+                            </div>
+                            <!-- This redirect url field below will contain the current URL.
+                            It'll be sent to the view we'll post this form to so we can 
+                            redirect the user back to the same page once the product is added 
+                            to their cart. -->
+                            <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                        </div>  <!-- form row class ends -->
+                    </form>
+
                     <hr>
 
                     <strong>
@@ -71,17 +100,10 @@
                     <a href="{% url 'add_to_wishlist' product.pk %}" class="btn btn-light" role="button" aria-disabled="true">Add to Wish List</a>
                     <a href="{% url 'wishlist' %}" class="btn btn-light" role="button" aria-disabled="true">View your Wish List</a>
                     
-                </div>
-            </div>
-        </div>
+                </div> <!-- product-details container class ends -->
+            </div> <!-- col-12 class ends -->
+        </div>  <!-- row class ends -->
     </div>  <!-- container-fluid class ends-->
-
-    <!-- GENERAL COMMENTS CODE GOES HERE -->
-    <div class="row">
-        <div class="col">
-            <hr>
-        </div>
-    </div>
 
     <!-- PRODUCT REVIEW CODE GOES HERE -->
     <h2 class="subtitle">Reviews</h2>
