--- a/templates/base.html
+++ b/templates/base.html
@@ -130,7 +130,7 @@
             </div>
             <div id="delivery-banner" class="row text-center">
                 <div class="col bg-grey text-white">
-                    <h4 class="my-1 font-weight-bold">Free Delivery on orders over €{{ free_shipping_threshold }}!</h4>
+                    <h4 class="my-1 font-weight-bold">Free Delivery on orders over €{{ free_delivery_threshold }}!</h4>
                 </div>
             </div>
         </header> 
