Fix the add to cart issue

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -61,7 +61,9 @@
                     <!-- This column will contain a table to show the cart contents. -->
                     <div class="col">
                         {% if cart_items %}
-                            <div class="table-responsive rounded"></div>
+                            <div class="table-responsive rounded">
+                                
+                            </div>
                         {% else %}
                             <p class="lead mb-5 text-center">Your bag is empty.</p>
                         {% endif %}
