--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -90,8 +90,8 @@
                                                 <small class="text-muted">No Rating!</small>
                                             {% endif %}
                                             <!-- <p class="mt-3">{{ product.description }}</p> -->
-                                            <div class="cart-btn">
-                                                <button class="btn btn-outline-secondary add-btn">Add to Cart</button>
+                                            <div class="cart-btn">                                              
+                                                <a class="btn btn-md rounded-0 py-3 mt-5 shop-now-button" href="{% url 'add_to_cart' product.id %}">Add to Cart</a>
                                             </div>
 
                                             <div class="view-btn">
