--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -51,7 +51,11 @@
                                     €0.00
                                 {% endif %}
                             <th>
-                                <a class="btn btn-md btn-success rounded-0 py-3 checkout font-weight-bold" href="#">Checkout</a>
+                                <a class="btn btn-md btn-success rounded-0 py-3 checkout font-weight-bold" href="#">
+                                    Secure Checkout<span class="icon">
+                                        <i class="fas fa-lock"></i>
+                                    </span>
+                                </a>
                             </th>                        
                         </tr>
                     </table>
@@ -62,7 +66,50 @@
                     <div class="col">
                         {% if cart_items %}
                             <div class="table-responsive rounded">
-                                
+                                <table class="table table-sm table-borderless">
+                                    <thead class="text-black">
+                                        <tr>
+                                            <th scope="col">Product Detail</th>
+                                            <th scope="col"></th>
+                                            <th scope="col">Price</th>
+                                            <th scope="col">Qty</th>
+                                            <th scope="col">Subtotal</th>
+                                        </tr>
+                                    </thead>
+
+                                    {% for item in cart_items %}
+                                        <tr>
+                                            <td class="p-3 w-25">
+                                                <img class="img-fluid rounded" src="{{ item.product.image.url }}">
+                                            </td>
+                                            <td class="p-3 w-25">
+                                                <p class="my-0"><strong>{{ item.product.name }}</strong></p>
+                                                <p class="my-0 small text-muted">SKU: {{ item.product.sku|upper }}</p>
+                                            </td>
+                                            <td class="p-3 w-25">
+                                                <p class="my-0">€{{ item.product.price }}</p>
+                                            </td>
+                                            <td class="p-3 w-25">
+                                                <p class="my-0">{{ item.quantity }}</p>
+                                            </td>
+                                            <td class="p-3 w-25">
+                                                <p class="my-0">€{{ item.product.price }}</p>
+                                            </td>
+                                        </tr>
+                                    {% endfor %}
+                                    <tr>
+                                        <td colspan="5" class="pt-5 text-right">
+                                            <h6><strong>Cart Total: €{{ total|floatformat:2 }}</strong></h6>
+                                            <h6>Delivery: €{{ delivery|floatformat:2 }}</h6>
+                                            <h4 class="mt-4"><strong>Grand Total: €{{ grand_total|floatformat:2 }}</strong></h4>
+                                            {% if free_delivery_delta > 0 %}
+                                                <p class="mb-1 text-danger">
+                                                    Great Savings! Get free delivery when you spend just <strong>€{{ free_delivery_delta }}</strong> more!
+                                                </p>
+                                            {% endif %}
+                                        </td>
+                                    </tr>
+                                </table>  
                             </div>
                         {% else %}
                             <p class="lead mb-5 text-center">Your bag is empty.</p>
@@ -71,6 +118,23 @@
             </div> <!-- col div ends -->
         </div>  <!-- row div ends -->
     </div>
+
+    <!-- BACK TO TOP BUTTON -->
+    <div class="btt-button shadow-sm rounded-0 border border-black">
+        <a class="btt-link d-flex h-100">
+            <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
+        </a>
+    </div>
+{% endblock %}
+
+<!-- JS FOR BACK TO TOP BUTTON -->
+{% block postloadjs %}
+    {{ block.super }}
+    <script type="text/javascript">
+        $('.btt-link').click(function(e) {
+            window.scrollTo(0,0)
+        })
+    </script>
 {% endblock %}
 
 
