Remove background image on wislist template and change the text colour of verification sent page for good user experience

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -325,6 +325,18 @@ p.cart-empty {
     border: solid 2px black;
 }
 
+/* Verification Sent Page styling */
+.text-colour-change {
+    color: #fff;
+    text-align: center;
+    margin-top: 50px;
+}
+
+.text-size {
+    font-size: 25px;
+}
+
+
 
 /* .btn-like:hover,
 .btn-like:active {
