--- a/products/templates/products/user_wish_list.html
+++ b/products/templates/products/user_wish_list.html
@@ -5,6 +5,7 @@
 {% block content %}
 
 <div class="container mb-2">
+    <div class="overlay"></div>
     <div class="row">
         <div class="col">
             <hr>
