--- a/products/templates/products/user_wish_list.html
+++ b/products/templates/products/user_wish_list.html
@@ -70,4 +70,20 @@
         <p class="no-reviews-wrapper notification">Please <a href="{% url 'account_login' %}"><strong>Sign In</strong></a> to view your Wish List!</p>
     {% endif %}
 </div>
+<!-- BACK TO TOP BUTTON -->
+<div class="btt-button shadow-sm rounded-0 border border-black">
+    <a class="btt-link d-flex h-100">
+        <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
+    </a>
+</div>
+{% endblock %}
+
+<!-- JAVASCRIPT FOR BACK TO TOP BUTTON -->
+{% block postloadjs %}
+    {{ block.super }}
+    <script type="text/javascript">
+        $('.btt-link').click(function(e) {
+            window.scrollTo(0,0)
+        })
+    </script>
 {% endblock %}
