--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -18,8 +18,8 @@
             </h1>
             <div class="my-5">
                 <h4>
-                    <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 py-3">Shop Now</a>
-                    
+                    <a class="btn btn-lg btn-dark rounded-0 py-3 px-5 shop-now-button font-weight-bold" href="{% url 'products' %}" >Shop Now</a>
+                    <!-- <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 py-3">Shop Now</a> -->   
                 </h4>
             </div>
         </div>
