--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -78,13 +78,12 @@
                             </div>
 
                             <div class="col-12">
-                                <a class="btn btn-md rounded-0 py-3 mt-5 shop-now-button cart-margin" href="{% url 'products' %}">
+                                <a class="btn btn-md btn-dark rounded-0 py-3 mt-5 shop-now-button font-weight-bold" href="{% url 'products' %}">
                                     <span class="icon">
                                         <i class="fas fa-chevron-left"></i>
-                                    </span>
-                                    <span>Continue Shopping</span>    
+                                    </span>Continue Shopping    
                                 </a>
-                                <input type="submit" class="btn btn-md rounded-0 py-3 mt-5 shop-now-button" value="Add to Cart">
+                                <input type="submit" class="btn btn-md rounded-0 py-3 mt-5 px-5 shop-now-button bttn-success font-weight-bold" value="Add to Cart">
                             </div>
                             <!-- This redirect url field below will contain the current URL.
                             It'll be sent to the view we'll post this form to so we can 
