--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -17,7 +17,7 @@
         <div class="row">
             <div class="col">
                 <hr>
-                <h2 class="logo-font mb-4">Products</h2>
+                <h2 class="logo-font mb-4"><em>Products</em></h2>
                 <hr>
             </div>
         </div>
@@ -91,11 +91,10 @@
                                             {% endif %}
                                             <!-- <p class="mt-3">{{ product.description }}</p> -->
                                             <div class="cart-btn">                                              
-                                                <a class="btn btn-md rounded-0 py-3 mt-5 shop-now-button" href="{% url 'add_to_cart' product.id %}">Add to Cart</a>
+                                                <a class="btn btn-md btn-success mt-5 font-weight-bold" href="{% url 'add_to_cart' product.id %}">Add to Cart</a>
                                             </div>
-
                                             <div class="view-btn">
-                                                <a class="btn btn-outline-success view-expand" href="{% url 'product_detail' product.id %}">View</a>
+                                                <a class="btn btn-md btn-dark text-white view-expand font-weight-bold" href="{% url 'product_detail' product.id %}">View</a>
                                             </div>
 
                                         </div>
