--- a/products/templates/products/user_wish_list.html
+++ b/products/templates/products/user_wish_list.html
@@ -9,7 +9,7 @@
     <div class="row">
         <div class="col">
             <hr>
-            <h2 class="logo-font mb-4">My Wish List</h2>
+            <h2 class="logo-font mb-4"><em>My Wish List</em></h2>
             <hr>
         </div>
     </div>
@@ -54,7 +54,8 @@
                                 <small class="text-muted">No Rating!</small>
                             {% endif %}
                             <p class="mt-3">{{ product.description }}</p>
-                            <a type="button" class="btn btn-primary btn-sm" href="{% url 'add_to_wishlist' product.pk %}">Remove from Wishlist</a>
+                            <a class="btn btn-md py-3 btn-dark text-white view-expand font-weight-bold" type="button" href="{% url 'add_to_wishlist' product.pk %}">Remove from Wishlist</a>
+                            <!-- <a type="button" class="btn btn-primary btn-sm" href="{% url 'add_to_wishlist' product.pk %}">Remove from Wishlist</a> -->
                         </div>
                     </div>
                 </div> <!-- row div ends-->
