--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -1,13 +1,13 @@
 <div class="toast custom-toast rounded-0 border-top-0" data-autohide="false">
     <div class="arrow-up arrow-success"></div>
     <div class="w-100 toast-capper bg-success"></div>
-    <div class="toast-header bg-white text-dark">
+    <div class="toast-header bkg-white text-dark">
         <strong class="mr-auto text-success">Success!</strong>
         <button type="button" class="ml-2 mb-1 close text-dark" data-dismiss="toast" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
-    <div class="toast-body bg-white">
+    <div class="toast-body bkg-white">
         <div class="row">
             <div class="col">
                 {{ message }}
@@ -15,7 +15,7 @@
             </div>
         </div>
         {% if grand_total %}
-            <p class="bg-white bg-dark bg-color text-white pl-2 py-1">Your Cart ({{ product_count }})</p>
+            <p class="bg-dark bg-color text-white pl-2 py-1">Your Cart ({{ product_count }})</p>
             <div class="cart-notification-wrapper"> 
                 {% for item in cart_items %}
                     <div class="row">
