--- a/static/css/base.css
+++ b/static/css/base.css
@@ -418,6 +418,11 @@ a.checkout {
     border: solid 2px black;
 }
 
+/* .btn-update {
+    padding-left: 15px;
+    padding-right: 15px;
+} */
+
 /* a.shopping-btn {
     margin-left: 150px;
     margin-bottom: 10px;
