Add loading overlay to the checkout page

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -168,6 +168,13 @@
             </div> <!-- col 12 div ends -->
         </div>  <!-- row div ends -->
     </div> <!-- container div ends -->
+    <div id="loading-overlay">
+        <h1 class="text-light logo-font loading-spinner">
+            <span class="icon">
+                <i class="fas fa-3x fa-sync-alt fa-spin"></i>
+            </span>
+        </h1>
+    </div>
 
     <!-- BACK TO TOP BUTTON -->
     <div class="btt-button shadow-sm rounded-0 border border-black">
