--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -4,17 +4,20 @@
 
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
-{% block content %}
-<h1 class="sign-out">{% trans "Sign Out" %}</h1>
+{% block inner_content %}
+  <hr>
+  <h2 class="logo-font mb-4 sign-in"><em>{% trans "Sign Out" %}</em></h2>
+  <hr>
 
-<p class="signout-quest">{% trans 'Are you sure you want to sign out?' %}</p>
+<p>{% trans 'Are you sure you want to sign out?' %}</p>
 
 <form method="post" action="{% url 'account_logout' %}">
   {% csrf_token %}
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
   {% endif %}
-  <button class="signOut-btn" type="submit">{% trans 'Sign Out' %}</button>
+  <a class="btn btn-dark rounded-0" href="{% url 'home' %}">Cancel</a>
+  <button class="primaryAction btn-success signIn-btn" type="submit">{% trans 'Sign Out' %}</button>
 </form>
 
 
