--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -35,6 +35,7 @@
                 <hr>
             </div>
         </div>  <!-- row div ends -->
+        {{ profile }}
     </div>  <!-- container div ends -->
 
 
