--- a/static/css/base.css
+++ b/static/css/base.css
@@ -173,6 +173,11 @@ a.category-badge > span.badge:hover {
     cursor: pointer;
 }
 
+/* Search box input color */
+input[name='q']::placeholder {
+    color: #aab7c4;
+}
+
 .btn-like {
     color: #E84610;
     border: none;
@@ -209,7 +214,7 @@ a.category-badge > span.badge:hover {
     height: 0; 
     border-left: 4px solid transparent;
     border-right: 4px solid transparent; 
-    border-bottom: 10px solid black;
+    border-bottom: 10px solid #e75480;  /* black */
     position: absolute;
     top: -10px;
     right: 36px;
@@ -280,15 +285,15 @@ a.passForget {
     padding: 5px 20px;
 }
 
-.signIn-btn:hover {
+/* .signIn-btn:hover {
     color:#fff;
     background: #000;
-}
+} */
 
-p.reg {
+/* p.reg {
     font-weight: bold;
     color: #fff;
-}
+} */
 
 form.login, h1.sign-in, .logout, p.reg, h1.sign-out, .signout-quest {
     text-align: center;
@@ -454,33 +459,6 @@ p.cart-empty {
 }
 
 
-
-
-
-/* .btn-like:hover,
-.btn-like:active {
-    color: #E84610;
-    background: transparent;
-    border: none;
-} */
-
-/* .box-element {
-    box-shadow:hsl(0, 0%, 80%) 0 0 16px;
-	background-color: #fff;
-	border-radius: 4px;
-	padding: 10px;
-} */
-
-/* .product {
-    border-radius: 0 0 4px 4px;
-} */
-
-/*.product-image {
-     margin-top: 225px; 
-    width: 100%;
-    height: 100%;
-} */
-
 /*          MEDIA QUERIES           */
 /* Slightly larger container on xl screens */
 @media (min-width: 1200px) {
@@ -488,6 +466,24 @@ p.cart-empty {
       max-width: 80%;
     }
   }
+
+  /*    Allauth form formatting    */
+  /* Makes all inputs have black borders & a zero border-radius. */
+  .allauth-form-inner-content input {
+    border-color: #000;
+    border-radius: 0;
+}
+
+/* This hides all labels on the login page except remember me checkbox 
+since all other inputs will have placeholders. */
+.allauth-form-inner-content label:not([for='id_remember']) {
+    display: none;
+}
+
+/* Gives the placeholders same colour as its rest. */
+.allauth-form-inner-content input::placeholder {
+    color: #aab7c4;
+}
 
   /* fixed top navbar only on medium and up */
 @media (min-width: 992px) {
