--- a/templates/allauth/account/account_inactive.html
+++ b/templates/allauth/account/account_inactive.html
@@ -4,8 +4,10 @@
 
 {% block head_title %}{% trans "Account Inactive" %}{% endblock %}
 
-{% block content %}
-<h1>{% trans "Account Inactive" %}</h1>
+{% block inner_content %}
+<hr>
+<h2 class="logo-font mb-4 sign-in"><em>{% trans "Account Inactive" %}</em></h2>
+<hr>
 
 <p>{% trans "This account is inactive." %}</p>
 {% endblock %}
