--- a/templates/allauth/account/verification_sent.html
+++ b/templates/allauth/account/verification_sent.html
@@ -4,10 +4,11 @@
 
 {% block head_title %}{% trans "Verify Your E-mail Address" %}{% endblock %}
 
-{% block content %}
-<div class="text-colour-change">
-    <h1>{% trans "Verify Your E-mail Address" %}</h1>
+{% block inner_content %}
+    <hr>
+    <h2 class="logo-font mb-4"><em>{% trans "Verify Your E-mail Address" %}</em></h2>
+    <hr>
 
     <p class="text-size">{% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
-</div>
+
 {% endblock %}
