--- a/templates/base.html
+++ b/templates/base.html
@@ -82,7 +82,7 @@
                                         {% if request.user.is_superuser %}
                                             <a href="#" class="dropdown-item bg-color text-white">Store Management</a>
                                         {% endif %}
-                                        <a href="#" class="dropdown-item bg-color text-white">My Profile</a>
+                                        <a href="{% url 'profile' %}" class="dropdown-item bg-color text-white">My Profile</a>
                                         <a href="{% url 'account_logout' %}" class="dropdown-item bg-color text-white">Logout</a>
                                     {% else %}
                                         <a href="{% url 'account_signup' %}" class="dropdown-item bg-color text-white">Register</a>
