--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -193,12 +193,21 @@
         </div>
         <div class="row">
             <div class="col-12 col-lg-7 text-center">
-                <a href="{% url 'products' %}?category=new_arrivals,deals,clearance" class="btn btn-dark text-white rounded-0 my-5">
-                    <span class="icon mr-2">
-                        <i class="fas fa-gifts"></i>
-                    </span>
-                    <span>Now check out our New Arrivals & Latest Deals!</span>
-                </a>
+                {% if from_profile %}
+                    <a href="{% url 'profile' %}" class="btn btn-dark text-white rounded-0 my-5">
+                        <span class="icon mr-2">
+                            <i class="fas fa-angle-left"></i>
+                        </span>
+                        <span>Back to Profile</span>
+                    </a>
+                {% else %}
+                    <a href="{% url 'products' %}?category=new_arrivals,deals,clearance" class="btn btn-dark text-white rounded-0 my-5">
+                        <span class="icon mr-2">
+                            <i class="fas fa-gifts"></i>
+                        </span>
+                        <span>Now check out our New Arrivals & Latest Deals!</span>
+                    </a>
+                {% endif %}
             </div>
         </div>
     </div> <!-- container div ends -->
