--- a/templates/base.html
+++ b/templates/base.html
@@ -80,7 +80,7 @@
                                 {% if request.user.is_authenticated %}
                                         <p class="greeting">Welcome {{ user.username }}!</p> 
                                         {% if request.user.is_superuser %}
-                                            <a href="#" class="dropdown-item bg-color text-white">Store Management</a>
+                                            <a href="{% url 'add_product' %}" class="dropdown-item bg-color text-white">Store Management</a>
                                         {% endif %}
                                         <a href="{% url 'profile' %}" class="dropdown-item bg-color text-white">My Profile</a>
                                         <a href="{% url 'account_logout' %}" class="dropdown-item bg-color text-white">Logout</a>
